syntax = "proto3";

package todo;

service TodoService {
  rpc AddTask (Task) returns (TaskResponse);
  rpc ListTasks (Empty) returns (TaskList);
  rpc MarkTaskDone (TaskId) returns (TaskResponse);
  rpc DeleteTask(TaskId) returns (TaskResponse);

}

message Task {
  string id = 1;
  string description = 2;
  bool done = 3;
}

message TaskId {
  string id = 1;
}

message Empty {}

message TaskResponse {
  string message = 1;
}

message TaskList {
  repeated Task tasks = 1;
}
